--- a/style.css
+++ b/style.css
@@ -50,30 +50,75 @@ ul li a{
     
 }
 
+/* button & effect */
+ul li button{
+  height: 2.5em;
+  width: 4.5em;
+  position: relative;
+  border: 5px;
+  border-color: blanchedalmond;
+  background-color: transparent;
+  padding-left: 0.7em;
+  padding-right: 0.7em;
+  margin: 5px;
+  outline: none;
+  border: none;
+  
+}
+button:before{
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  border: 2px solid transparent;
+  bottom: 0;
+  left: 0;
+  box-sizing: border-box;
+}
+button:after{
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  border: 2px solid transparent;
+  top: 0;
+  right: 0;
+  box-sizing: border-box;
+}
+button:hover:before{
+  height: 2.5em;
+  width: 4.5em;
+  border: 2px solid white;
+  border-radius: 0.8em;
+  border-right: none;
+  border-bottom: none;
+  transition: height 0.2s linear,
+          width 0.2s linear 0.2s;
+              
+}
+button:hover:after{
+  height: 2.5em;
+  width: 4.5em;
+  border: 2px solid white;
+  border-radius: 0.8em;
+  border-left: none;
+  border-top: none;
+  transition: height 0.2s linear,
+          width 0.2s linear 0.2s;
+              
+}
+
 /* падащо меню */
   
 .dropbtn {
-  border-radius: 5px;
-    /* background-color: #3a7bd5; */
-    background-image: linear-gradient(#3a7bd5, #3a6073);
-    color: white;
-    padding: 0.6em 0.8em;
+
+    color: white; 
     font-size: 0.8em;
-    border: none;
     cursor: pointer;
-    margin: 5px;
-    transition: 0.5s linear;
-    position: relative;
+    
   }
-  .dropdown:hover .dropbtn {
-    background-color: #1776a5;
-    background-image: linear-gradient(#3a6073, #3a7bd5); 
-  }
-  .dropbtn:hover{
-    background-color: #1776a5;
-    background-image: linear-gradient(#3a6073, #3a7bd5); 
-  }
-  .dropbtn ::before{
+ 
+.dropbtn ::before{
     content: "";
     position: absolute;
     left: 0;
@@ -172,7 +217,7 @@ ul li a{
   .gallery img {
     width: 100px;
     padding: 5px;
-    
+    border-radius: 15px;
     
   }
  
@@ -184,7 +229,7 @@ ul li a{
   /* footer */
   footer{
     background-image: linear-gradient(#3a6073, #3a7bd5); 
-    
+    bottom: 0;
   }
   footer h3{
     margin-bottom: 10px;
