--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@ html{
 html, body {
   margin: 0;
   padding: 0;
-  
+  font-family: 'Jost', sans-serif;
+  font-size: 20px;
 }
 
 body {
   
   background-image: linear-gradient(#28313B 0%, #485461 80%);
   
-   font-family: 'Oswald', sans-serif;
-   font-size: 20px;
+  
 }
 
 
@@ -109,7 +109,9 @@ button:hover:after{
 }
 
 /* падащо меню */
-  
+.dropbtn a{
+  font-family: 'Jost', sans-serif;;
+}
 .dropbtn {
 
     color: white; 
@@ -155,6 +157,7 @@ button:hover:after{
   
   
   .dropdown-content {
+    opacity: 0;
     display: none;
     position: fixed;
     background-color: rgba(19, 18, 18, 0.8);
@@ -165,6 +168,12 @@ button:hover:after{
     left: 0;
     
   }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    opacity: 1;
+  }
+  
   
   .dropdown-content a {
     color: black;
@@ -182,14 +191,10 @@ button:hover:after{
   }
   
   .dropdown-content a:hover  {
-   
-    transform: scale(1.2);
+    
+    transform: scale(1.1);
 }
   
-  .dropdown:hover .dropdown-content {
-    display: block;
-    
-  }
   
   
 
@@ -212,48 +217,58 @@ button:hover:after{
   }
   .gallery a {
     margin-left: 20px;
+    
   }
   
   .gallery img {
     width: 100px;
-    padding: 5px;
+    /* padding: 5px; */
     border-radius: 15px;
-    
+    border: 3px white transparent;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    margin-top: 10px;
+    border: 3px green transparent;
   }
  
   .gallery img:hover{
     filter: grayscale(80%);
-    transform: scale(1.2);
+    transform: scale(1.1);
+    border: 3px green solid;
+   
+  }
+  .gallery div{
+    
   }
 
   /* footer */
   footer{
+    position: relative;
     background-image: linear-gradient(#3a6073, #3a7bd5); 
     bottom: 0;
   }
   footer h3{
     margin-bottom: 10px;
     margin-top: 30px;
+    padding-top: 10px;
   }
   .info a{
-    font-size: 0.5em;
+    font-size: 0.8em;
     color: blanchedalmond;
-    text-align: left;
     margin-left: 30px;
     
   }
-  footer div {
-    display: inline-block;
-    
-  }
+  
   .icons {
-    float: right;
+    position: relative ;
     display: inline-block;
+    margin-left: 20px;
     margin-right: 30px;
-    margin-top: 70px;
+    margin-top: 30px;
   }
   footer img{
     width: 30px;
     margin-left: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
