--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,218 @@
-body {
-    background-color:#414042;
-   font-family: 'Courier New', Courier, monospace;
+
+@import url("./gallery.css");
+
+@import url("media.css");
+
+html{
+  scroll-behavior: smooth;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Jost', sans-serif;
+  font-size: 20px;
+}
+
+body {
+  
+  background-image: linear-gradient(#28313B 0%, #485461 80%);
+  
+  
+}
+
+/* navbar */
+
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-
-    background-color: #47a2da;
+    background-image: linear-gradient(#3a7bd5, #3a6073);
     position: fixed;
     top: 0;
-    left: 0px;
-    right: 0px;
     width: 100%;
+    
+    
 }
 
-ul li {
-    float: right;
-    border-left: 1px solid #1776a5;
 
+ul li {
+  float: right;
+    
 }
 
 ul li a{
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.1em 0.1em;
     text-decoration: none;
-   
-    
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
     
 }
+
+/* button & effect */
+ul li button{
+  height: 2.5em;
+  width: 4.5em;
+  position: relative;
+  border: 5px;
+  border-color: blanchedalmond;
+  background-color: transparent;
+  padding-left: 0.7em;
+  padding-right: 0.7em;
+  margin: 5px;
+  outline: none;
+  border: none;
   
+}
+button:before{
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  border: 2px solid transparent;
+  bottom: 0;
+  left: 0;
+  box-sizing: border-box;
+}
+button:after{
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  border: 2px solid transparent;
+  top: 0;
+  right: 0;
+  box-sizing: border-box;
+}
+button:hover:before{
+  height: 2.5em;
+  width: 4.5em;
+  border: 2px solid white;
+  border-radius: 0.8em;
+  border-right: none;
+  border-bottom: none;
+  transition: height 0.2s linear,
+          width 0.2s linear 0.2s;
+              
+}
+button:hover:after{
+  height: 2.5em;
+  width: 4.5em;
+  border: 2px solid white;
+  border-radius: 0.8em;
+  border-left: none;
+  border-top: none;
+  transition: height 0.2s linear,
+          width 0.2s linear 0.2s;
+              
+}
+
+/* dropdown menu */
+.dropbtn a{
+  font-family: 'Jost', sans-serif;;
+}
 .dropbtn {
-    background-color: #47a2da;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
+
+    color: white; 
+    font-size: 0.8em;
     cursor: pointer;
+    
   }
-  
+ 
+.dropbtn ::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: #1776a5 ;
+    z-index: -1;
+    transition: transform 0.5s;
+    transform-origin: 0 0;
+    transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+
+  }
+ 
   .dropdown {
     position: relative;
     display: inline-block;
+  
   }
   
   .dropdown-content {
+    opacity: 0;
     display: none;
-    position: absolute;
-    background-color: #333;
-    max-width: 900px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    position: fixed;
+    background-color: rgba(19, 18, 18, 0.8);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+    padding: 12px 16px;
     z-index: 1;
+    right: 0;
+    left: 0;
     
   }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 10px 10px;
-    text-decoration: none;
-    display: block;
-    float: left;
- 
-   
-  }
-  
-  .dropdown-content a:hover  {
-   
-    transform: scale(1.2);
-}
   
   .dropdown:hover .dropdown-content {
     display: block;
-    
+    opacity: 1;
   }
   
-  .dropdown:hover .dropbtn {
-    background-color: #1776a5;
+  
+  .dropdown-content a {
+    color: black;
+    padding: 8px 8px;
+    text-decoration: none;
+    display: block;
+    float: right;
+    left: 0;
+    right: auto;
   }
-  .dropbtn:hover{
-    background-color: #1776a5;
+  .dropdown-content a img{
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
   }
-  div a img{
-      transition: 1s;
-      width: 80px;
-      height: 80px;
-      
-      border-radius: 10px;
-  }
+  
+  .dropdown-content a:hover  {
+    
+    transform: scale(1.2);
+}
 
 
+  /* footer */
+
+  footer{
+    position: relative;
+    background-image: linear-gradient(#3a6073, #3a7bd5); 
+    bottom: 0;
+  }
+  footer h3{
+    margin-bottom: 10px;
+    margin-top: 30px;
+    padding-top: 10px;
+  }
+  .info a{
+    font-size: 0.8em;
+    color: blanchedalmond;
+    margin-left: 30px;
+    text-decoration: none;
+  }
+  
+  .icons {
+    position: relative ;
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 30px;
+    margin-top: 30px;
+  }
+  footer img{
+    width: 30px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+  }
+  
+ 
